
[package]
name = "noise_did_vc"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
snow = "0.10"
ssi = { version = "0.5.0", features = ["vc", "did", "jwk", "ldp"] }
